# vintedded

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
docs/: SETUP-INFRASTRUTTURA.md
services/api/: .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
services/api/src/: __init__.py  config.py  main.py
services/api/src/api/v1/: __init__.py
services/api/src/api/v1/endpoints/: health.py
services/api/src/core/: logging.py  redis.py
services/api/src/db/: session.py
services/frontend/: biome.json  next.config.js  package.json  tailwind.config.js
services/frontend/app/: layout.tsx  page.tsx
vinted-enterprise/: CLAUDE.md
vinted-enterprise/agent-framework/: agent-framework.md
vinted-enterprise/cove-docs/: 00-COVE-MASTER.md  01-COVE-STACK.md  02-COVE-ARCHITETTURA.md  03-COVE-DEPLOYMENT.md  04-COVE-ROADMAP.md
vinted-enterprise/kilo-config/: KILO-SETUP.md  kilo-mcp-config.json
vinted-enterprise/mcp-servers/: api_inspector.py
